kubernetes/deployment.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: $CI_ENVIRONMENT_SLUG
  namespace: $KUBE_NAMESPACE
  labels:
    app: $CI_ENVIRONMENT_SLUG
    pipeline_id: "$CI_PIPELINE_ID"
    build_id: "$CI_JOB_ID"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: $CI_ENVIRONMENT_SLUG
      name: $CI_ENVIRONMENT_SLUG
      space: $KUBE_NAMESPACE
  strategy:
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 0
  template:
    metadata:
      labels:
        name: $CI_ENVIRONMENT_SLUG
        app: $CI_ENVIRONMENT_SLUG
        space: $KUBE_NAMESPACE
    spec:
      terminationGracePeriodSeconds: 60
      containers:
      - name: $KUBE_NAMESPACE-$CI_ENVIRONMENT_SLUG
        image: $CI_REGISTRY_IMAGE:$CI_COMMIT_SHA
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: $PORT
        resources:
          limits:
            cpu: "4"
        readinessProbe:
          httpGet:
            path: /ping_all
            port: 80
            scheme: HTTP
            httpHeaders:
              - name: Host
                value: 127.0.0.1
          initialDelaySeconds: 30
          timeoutSeconds: 2
          periodSeconds: 3
          failureThreshold: 10
      imagePullSecrets:
        - name: gitlab-registry
