kubernetes/service-elaphros.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: elaphros-$CI_ENVIRONMENT_SLUG
  namespace: $KUBE_NAMESPACE
  labels:
    app: elaphros-$CI_ENVIRONMENT_SLUG
    pipeline_id: "$CI_PIPELINE_ID"
    build_id: "$CI_JOB_ID"
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: elaphros-$CI_ENVIRONMENT_SLUG
