kubernetes/ingress-elaphros.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-elaphros-$CI_ENVIRONMENT_SLUG
  namespace: $KUBE_NAMESPACE
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      set ${DOLLAR}msecstart "${DOLLAR}{msec}000";
      if (${DOLLAR}msecstart ~ "^(.*)\.(.*)") {set ${DOLLAR}msecout "t=${DOLLAR}1${DOLLAR}2";}
      proxy_set_header X-Request-Start ${DOLLAR}msecout;
  labels:
    app: elaphros-$CI_ENVIRONMENT_SLUG
    pipeline_id: "$CI_PIPELINE_ID"
    build_id: "$CI_JOB_ID"
spec:
  tls:
    - hosts:
        - elaphros-$CI_ENVIRONMENT_HOSTNAME
      secretName: ssl
  rules:
    - host: elaphros-$CI_ENVIRONMENT_HOSTNAME
      http:
        paths:
          - path: /
            backend:
              serviceName: elaphros-$CI_ENVIRONMENT_SLUG
              servicePort: 80
